# PDFigCapX

./: .gitignore  .pylintrc  .style.yapf  Dockerfile  LICENSE  README.md  environment.yml  requirements.txt
.devcontainer/: devcontainer.json
code/: FigCap.py  pdf_info.py  renderer.py  xpdf_process.py
data/: GT_GXD200.json  GT_PMC200.json
nb/: layout.ipynb
pdfigcapx/: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
pdfigcapx/src/: batch_processing.py  chrome.ipynb  contours.py  document.py  draw.py  driver.ipynb  extract.ipynb  layout.py  main.py  models.py  page.py  refactored.ipynb  sweep.py  utils.py
pdfigcapx/tests/: test_pdfigcapx.py  test_utils.py
pdfigcapx/tests/data/sample_html_page/: page4.html
src/: pdf_info.py  renderer.py  utils.py  xpdf_process.py
src/pdfigcapx/: FigCap.py  dir_extractor.py  html_content.py  layout.py  page_metadata.py  pdf_info.py  renderer.py  utils.py
tests/: test_utils.py
tests/data/html-2/: index.html  page1.html  page10.html  page11.html  page12.html  page13.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
tests/data/htmls/: page1.html  page10.html  page11.html  page12.html  page13.html  page14.html  page15.html  page16.html  page17.html  page18.html  page19.html  page2.html  page20.html  page3.html  page4.html  page5.html  page6.html  page7.html  page8.html  page9.html
